--- a/index.html
+++ b/index.html
@@ -25,6 +25,46 @@
     <p class="subtitle">Bi-weekly top contributors</p>
     <div id="builders" class="grid"></div>
   </section>
+  <!-- BUILDER LEVELS -->
+<section class="levels">
+  <h2>Builder Levels</h2>
+  <div class="levels-grid">
+
+    <div class="level-card">
+      <h3>Builder 1.0</h3>
+      <p>
+        Entry-level contributors who actively submit
+        code, docs, or tools and participate consistently.
+      </p>
+    </div>
+
+    <div class="level-card highlight">
+      <h3>Builder 2.0</h3>
+      <p>
+        Proven builders with recurring high-quality
+        contributions and ecosystem impact.
+      </p>
+    </div>
+
+    <div class="level-card">
+      <h3>Builder 3.0</h3>
+      <p>
+        Core ecosystem builders with leadership,
+        mentorship, and long-term vision.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer>
+  <p>© 2026 Endless Protocol</p>
+  <p>
+    Built by the community ·
+    <span>#EndlessDev</span>
+  </p>
+</footer>
 
   <section id="submit" class="page">
     <h1>Submit Your Contribution</h1>
